--- a/CNewsProject/Views/Shared/_searchBarWithSuggestionsPartial.cshtml
+++ b/CNewsProject/Views/Shared/_searchBarWithSuggestionsPartial.cshtml
@@ -49,7 +49,16 @@
 
 <div id="@Model.ContainerId">
     <div class="autocomplete" style="width:200px;">
-        <input autocomplete="off" id="@Model.InputFieldId" type="text" name="@Model.ControllerParameter" placeholder="@Model.Placeholder">
+        @{
+            if (Model.ControllerParameter == "No Parameter")
+            {
+                <input autocomplete="off" id="@Model.InputFieldId" type="text" placeholder="@Model.Placeholder">
+            }
+            else
+            {
+                <input autocomplete="off" id="@Model.InputFieldId" type="text" name="@Model.ControllerParameter" placeholder="@Model.Placeholder">
+            }
+        }
     </div>
     <div class="btn btn-primary" id="@Model.ButtonId">@Model.ButtonName</div>
 </div>
