made sidebar pretty and more functional

--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -49,9 +49,9 @@
         </section>
     </div>
     <aside class="col-3 d-none d-md-block">
-        <div class="mt-1 mb-1" id="VCWeather">
+        <div class="mt-1 mb-1 VCWeather">
         </div>
-        <vc:exchange-all class="mb-1"></vc:exchange-all>
+        <div class="mb-1"><vc:exchange-all></vc:exchange-all></div>
         <vc:sidebar-headlines count="5"></vc:sidebar-headlines>
     </aside>
 </div>
