--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -10,18 +10,21 @@
         var list = (count++ % 2 == 0) ? leftList : rigthList;
         list.Add(article);
     }
+
+    ViewData["imgSize"] = 0;
 }
 
 <div class="row">
     <div class="col-md-9 col-12">
         <section class="main-article">
-            <partial name="_ArticlePartial" model="@Model.MainArticle"/>
+            <partial name="_ArticlePartial" model="@Model.MainArticle" view-data="ViewData"/>
         </section>
         <section class="articles row d-none d-md-flex">
             <div class="col-6">
                 <div class="row">
                     @foreach (var article in leftList)
                     {
+                        ViewData["imgSize"] = (int)ViewData["imgSize"] + 1;
                         <div class="col-12">
                             <partial name="_ArticlePartial" model="article"/>
                         </div>
@@ -51,7 +54,9 @@
     <aside class="col-3 d-none d-md-block">
         <div class="mt-1 mb-1 VCWeather">
         </div>
-        <div class="mb-1"><vc:exchange-all></vc:exchange-all></div>
+        <div class="mb-1">
+            <vc:exchange-all></vc:exchange-all>
+        </div>
         <vc:sidebar-headlines count="5"></vc:sidebar-headlines>
     </aside>
 </div>
