--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -11,11 +11,13 @@
 		var list = (count++ % 2 == 0) ? leftList : rigthList;
 		list.Add(article);
 	}
+
+	ViewData["imgSize"] = 0;
 }
 
 
 <section class="main-article">
-	<partial name="_ArticlePartial" model="@Model.MainArticle" />
+	<partial name="_ArticlePartial" model="@Model.MainArticle" view-data="ViewData"/>
 </section>
 <section class="articles row d-none d-md-flex">
 	
@@ -23,6 +25,7 @@
 		<div class="row">
 			@foreach (var article in leftList)
 			{
+				ViewData["imgSize"] = (int)ViewData["imgSize"] + 1;
 				<div class="col-12">
 					<partial name="_ArticlePartial" model="article"/>
 				</div>
@@ -33,6 +36,7 @@
 		<div class="row">
 			@foreach (var article in rigthList)
 			{
+				
 				<div class="col-12">
 					<partial name="_ArticlePartial" model="article"/>
 				</div>
