--- a/CNewsProject/Views/News/Sweden.cshtml
+++ b/CNewsProject/Views/News/Sweden.cshtml
@@ -20,18 +20,20 @@ foreach (var article in Model.NotMainButStillImportantArticles)
 var list = (count++ % 2 == 0) ? leftList : rigthList;
 list.Add(article);
 }
+ViewData["imgSize"] = 0;
 }
 
 
 <section class="main-article">
-	<partial name="_ArticlePartial" model="@Model.MainArticle" />
+	<partial name="_ArticlePartial" model="@Model.MainArticle" view-data="ViewData"/>
 </section>
 <section class="articles row d-none d-md-flex">
-
+	
 	<div class="col-6">
 		<div class="row">
 			@foreach (var article in leftList)
 			{
+				ViewData["imgSize"] = (int)ViewData["imgSize"] + 1;
 			<div class="col-12">
 				<partial name="_ArticlePartial" model="article"/>
 			</div>
