--- a/CNewsProject/Views/Shared/_ArticlePartial.cshtml
+++ b/CNewsProject/Views/Shared/_ArticlePartial.cshtml
@@ -6,7 +6,17 @@
 }
 
 <a class="card mb-4 w-100 hoverable unlink c-link-hover-container" asp-controller="News" asp-action="Article" asp-route-id="@Model.Id">
-    <img class="card-img-top" src="@newImageLink" alt="@Model.Headline" >
+    
+    @{
+        if ((int)ViewData["imgSize"] > 0)
+        {
+            <img class="card-img-top" src="@newImageLink" alt="@Model.Headline" >
+        }
+        else
+        {
+            <img class="card-img-top" src="@newImageLink2" alt="@Model.Headline" >
+        }
+    }
 
     <div class="card-body">
         <h5 class="card-title c-link-hover">@Model.Headline</h5>
