--- a/CNewsProject/Views/Subscription/Success.cshtml
+++ b/CNewsProject/Views/Subscription/Success.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="text-center">
-	<h1>Payment is Successful!</h1>
+	@* <h1>Payment is Successful!</h1> *@
+	<h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Thank You For Subscribing! Enjoy Unlimited Access To Our Website. </h1>
 	<img src="https://ruperhat.com/wp-content/uploads/2020/06/Paymentsuccessful21.png" alt="Payment Successful Image" />
 	<h5 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> We appreciate your choice! </h5>
 </div>
