--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -6,6 +6,9 @@
     string profileName = Model.User.UserName + "'s Profile";
 }
 
+<div id="SuccessMessageSpot">
+    
+</div>
 
 <h1>@profileName</h1>
 <div class="row">
