--- a/CNewsProject/Views/Shared/Components/NewsLetterSettings/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/NewsLetterSettings/Default.cshtml
@@ -28,10 +28,10 @@
 
     <div id="personalisedSettingsTarget" class="c-hidden">
         <div class="row">
-            <form id="newsLetterSettingsForm" asp-action="UpdateNewsLetterSetting" method="post">
-                
-                <div>
-                    Enable Newsletter?
+            <form  class="col-4 d-flex" id="newsLetterSettingsForm" name="theFormSoClear" asp-action="UpdateNewsLetterSetting" method="post">
+
+                <div class="newsLetterSettingsBackground">
+                    <label for="NewsLetterEnabled" class="col-10">Enable Newsletter?</label>
                     @{
                         if (Model.NewsLetterEnabled)
                         {
@@ -42,11 +42,11 @@
                             <input name="NewsLetterEnabled" type="checkbox" value="true"/>
                         }
                     }
-                    
+
                 </div>
-                
-                <div>
-                    <label class="col-9" asp-for="Latest">Include Latest News</label>
+
+                <div class="newsLetterSettingsBackground">
+                    <label class="col-10" for="Latest">Include Latest News</label>
                     @{
                         if (Model.Latest)
                         {
@@ -79,21 +79,29 @@
                 </div>
 
                 <input id="categoryIdsInput" type="hidden" asp-for="CategoryIds" value=""/>
-                <div class="row">
-                @{
-                    Dictionary<string, int> makeShitHappen = new() { { "Local", 1 }, { "Economy", 2 }, { "Sport", 3 }, { "Sweden", 4 }, { "World", 5 } };
-                    foreach (KeyValuePair<string, int> kvp in makeShitHappen)
-                    {
-                        if (Model.CategoryIds.Contains(kvp.Value))
+                <div>
+                    @{
+                        Dictionary<string, int> makeShitHappen = new() { { "Local", 1 }, { "Economy", 2 }, { "Sport", 3 }, { "Sweden", 4 }, { "World", 5 } };
+                        foreach (KeyValuePair<string, int> kvp in makeShitHappen)
                         {
-                            <label class="col-9">@kvp.Key</label><input type="checkbox" checked="checked" class="ThisClassIsPurelyForCategoryIds col-1 offset-1" value="@kvp.Value"/>
-                        }
-                        else
-                        {
-                            <label class="col-9">@kvp.Key</label><input type="checkbox" class="ThisClassIsPurelyForCategoryIds col-1 offset-1" value="@kvp.Value"/>
+                            string datId = "datId" + kvp.Key;
+                            if (Model.CategoryIds.Contains(kvp.Value))
+                            {
+                                <div class="newsLetterSettingsBackground">
+                                    <label for="@datId" class="col-10">@kvp.Key</label><input type="checkbox" id="@datId" checked="checked" class="ThisClassIsPurelyForCategoryIds col-1" value="@kvp.Value"/>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="newsLetterSettingsBackground">
+                                    <label for="@datId" class="col-10">@kvp.Key</label>
+                                    <input type="checkbox" id="@datId"
+                                           class="ThisClassIsPurelyForCategoryIds col-1"
+                                           value="@kvp.Value"/>
+                                </div>
+                            }
                         }
                     }
-                }
                 </div>
                 <div id="authorNamesHitBox" class="c-hover-pointer c-nonselectable">
                     <h4 style="font-weight: bold;">Subscribed Authors</h4>
@@ -106,7 +114,7 @@
                 </div>
 
                 <br/>
-                <button id="updateNewsLetterButton" class="btn btn-primary">Update</button>
+                <button class="btn btn-primary" id="theOneAndOnylButton">Update</button>
             </form>
         </div>
     </div>
@@ -125,16 +133,11 @@
         const inputButton = document.getElementById('@authorSearchSetting.ButtonId');
         const returnToArray = document.getElementById('returnToAuthorArray');
         const form = document.getElementById("newsLetterSettingsForm");
-            
-        let subscribedAuthors = @Html.Raw(Json.Serialize(@subscribedTo));
-        let lastOddOrEven = 1;
-        if (subscribedAuthors[0] !== "NO!"){
-            lastOddOrEven = CreateAuthorDivs("authorNamesContainer", subscribedAuthors);
-        }
+        const button = document.getElementById('theOneAndOnylButton');
         
-        form.addEventListener('submit', function (event){
+        form.addEventListener('submit', function(event){
             event.preventDefault();
-            
+            console.log("Shit happened");
             let catIdsArr=[];
             document.querySelectorAll(".ThisClassIsPurelyForCategoryIds:checked").forEach(function (elem){
                 catIdsArr.push(elem.value);
@@ -149,12 +152,50 @@
             }
             
             const data = new FormData(event.target);
-            const formJSON = Object.fromEntries(data.entries());
+            let formJSON = Object.fromEntries(data.entries());
+            formJSON = JSON.stringify(formJSON);
             
             console.log(formJSON);
             
             AjaxUpdateNewsLetterSetting(formJSON, AuthorValues);
-        });
+        })
+            
+        let subscribedAuthors = @Html.Raw(Json.Serialize(@subscribedTo));
+        let lastOddOrEven = 1;
+        if (subscribedAuthors[0] !== "NO!"){
+            lastOddOrEven = CreateAuthorDivs("authorNamesContainer", subscribedAuthors);
+        }
+        
+        function submitHandle(event) {
+            
+            let catIdsArr=[];
+            document.querySelectorAll(".ThisClassIsPurelyForCategoryIds:checked").forEach(function (elem){
+                catIdsArr.push(elem.value);
+            });
+               
+            document.getElementById("categoryIdsInput").value = StringifyArrayValues(catIdsArr);
+            
+            
+            let AuthorValues = GetAuthorDivValues();
+            if (AuthorValues !== "NO AUTHORS"){
+                console.log(AuthorValues);
+            }
+            
+            const data = new FormData(Event.target);
+            let formJSON = Object.fromEntries(data.entries());
+            formJSON = JSON.stringify(formJSON);
+            
+            console.log(formJSON);
+            
+            AjaxUpdateNewsLetterSetting(formJSON, AuthorValues);
+        }
+        
+        // SUBMIT HEEEEEEEEEEEEERRRRRRRRREEEEEEEEEEE
+        
+    
+        
+        
+        // END OF SUBMIT
         
         returnToArray.addEventListener('JSValueChange', function(){
             @{@authorSearchSetting.JsArrayName}.push(this.value);
@@ -181,6 +222,8 @@
                 @{@authorSearchSetting.JsArrayName} = @{@authorSearchSetting.JsArrayName}.filter(function (val) {
                     return val !== inputValue;
                 });
+                
+                inputBox.value = "";
                 
                 lastOddOrEven = CreateSingleAuthorDiv("authorNamesContainer", inputValue);
                 document.getElementById('@authorSearchSetting.InputFieldId').innerHTML = "";
